--- a/frontend/src/styles/components/forms.scss
+++ b/frontend/src/styles/components/forms.scss
@@ -7,6 +7,9 @@
   flex-direction: column;
   align-items: center;
   padding: 50px 0;
+  background-color: $secondaryColor;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 
 .form__input {
