--- a/frontend/src/styles/components/LoginPage.scss
+++ b/frontend/src/styles/components/LoginPage.scss
@@ -1,14 +1,10 @@
-.only-block__container {
+.login {
   width: 100vw;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 
   h1 {
     font-size: 56px;
     margin-bottom: 20px;
+    margin-top: 0;
   }
 }
 
@@ -19,7 +15,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 50px;
+  margin-top: 40px;
 }
 
 .options {
