--- a/frontend/src/styles/components/LoginPage.scss
+++ b/frontend/src/styles/components/LoginPage.scss
@@ -32,6 +32,8 @@
   width: 50%;
   border-top-right-radius: 20px;
   border-top-left-radius: 20px;
+  padding-top: .7em;
+  padding-bottom: .7em;
 
   h2 {
     font-size: 24px;
