--- a/frontend/src/styles/components/forms.scss
+++ b/frontend/src/styles/components/forms.scss
@@ -16,8 +16,9 @@
   position: relative;
   max-width: 70%;
   width: 100%;
+  text-wrap: nowrap;
 
-  input {
+  input, select {
     padding: 10px;
     width: calc(100% - 20px);
     background: $secondaryColor;
@@ -48,10 +49,177 @@
   margin-top: 30px;
   transition: .3s;
   border: 1px solid $focusColor;
+  text-wrap: nowrap;
 
   &:hover {
     cursor: pointer;
     background-color: $focusColor;
     color: $secondaryColor;
   }
+}
+
+.customCheckbox {
+  display: block;
+  position: relative;
+  height: 25px;
+  width: 25px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.customCheckbox input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.checkmark {
+  position: absolute;
+  top: -1px;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: $backgroundColor;
+  border: 1px solid $secondaryColor;
+  border-radius: 12px;
+  transition: .3s;
+}
+
+
+.customCheckbox:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+
+.customCheckbox input:checked ~ .checkmark {
+  background-color: $focusColor;
+}
+
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+
+.customCheckbox input:checked ~ .checkmark:after {
+  display: block;
+}
+
+
+.customCheckbox .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid $secondaryColor;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.form__joinedInput {
+  display: flex;
+  flex-direction: row;
+  border: 1px solid white;
+  border-radius: 10px;
+  align-items: center;
+  color: white;
+
+  input {
+    padding: 10px;
+    width: 2em;
+    background: $secondaryColor;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    font-size: 24px;
+  }
+}
+
+.custom__select {
+  width: 100%;
+
+  select {
+    width: calc(100% - 36px);;
+  }
+
+  option {
+    padding: 2em;
+  }
+}
+
+.switch__input {
+  label {
+    max-width: 60px;
+  }
+}
+
+// Custom slider from w3schools
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  margin-left: 1em;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: $focusColor;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: $secondaryColor;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px $secondaryColor;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
