--- a/frontend/src/styles/components/LoginPage.scss
+++ b/frontend/src/styles/components/LoginPage.scss
@@ -5,6 +5,10 @@
     font-size: 56px;
     margin-bottom: 20px;
     margin-top: 0;
+
+    @media only screen and (max-width: 1024px) { 
+      font-size: 48px;
+    }
   }
 }
 
@@ -16,6 +20,14 @@
   flex-direction: column;
   align-items: center;
   margin-top: 40px;
+
+  @media only screen and (max-width: 1250px) { 
+		max-width: 60%;
+	}
+
+  @media only screen and (max-width: 600px) { 
+		max-width: 90%;
+	}
 }
 
 .options {
