--- a/frontend/src/styles/components/MessageBox.scss
+++ b/frontend/src/styles/components/MessageBox.scss
@@ -54,12 +54,17 @@
   .avatar {
     background: $focusColor;
     margin-right: .5em;
+    min-width: 40px;
   }
+
+  @media only screen and (max-width: 1024px) { 
+    padding: .5em .3em;
+	}
 }
 
 .message__text {
   margin: 0;
   color: #ccc;
-  max-width: 80%;
+  max-width: calc(100% - 40px - 0.9em);
   overflow-wrap: break-word;
 }
