--- a/frontend/src/styles/components/ProjectPage.scss
+++ b/frontend/src/styles/components/ProjectPage.scss
@@ -4,12 +4,28 @@
     font-size: 46px;
     font-weight: 700;
     margin-bottom: 5px;
+
+    @media only screen and (max-width: 800px) { 
+      font-size: 38px;
+    }
+
+    @media only screen and (max-width: 500px) { 
+      font-size: 30px;
+    }
   }
 
   h2 {
     font-size: 34px;
     margin-bottom: 5px;
     margin-top: .8em;
+
+    @media only screen and (max-width: 800px) { 
+      font-size: 30px;
+    }
+
+    @media only screen and (max-width: 500px) { 
+      font-size: 26px;
+    }
   }
 
   .header__team {
@@ -31,11 +47,20 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+
+  @media only screen and (max-width: 1024px) { 
+    row-gap: 2em;
+		flex-direction: column;
+	}
 }
 
 .project__main {
   max-width: 73%;
   width: 100%;
+
+  @media only screen and (max-width: 1024px) { 
+    max-width: 100%;
+	}
 }
 
 .project__sidebar {
@@ -44,6 +69,16 @@
   width: 100%;
   border: 1px solid $secondaryColor;
   height: 600px;
+
+  @media only screen and (max-width: 1600px) { 
+    min-height: 450px;
+    max-width: 25%;
+  }
+
+  @media only screen and (max-width: 1024px) { 
+    margin-top: 2em;
+    max-width: 100%;
+	}
 }
 
 .project__basicInfo {
@@ -53,6 +88,15 @@
   grid-template-columns: repeat(4, 1fr);
   align-items: center;
   padding: .5em 2em;
+
+  @media only screen and (max-width: 750px) { 
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 0.5em;
+  }
+
+  @media only screen and (max-width: 400px) { 
+    padding: .2em 0.5em;
+  }
 }
 
 .projectFilter {
