--- a/frontend/src/styles/components/ProjectsPage.scss
+++ b/frontend/src/styles/components/ProjectsPage.scss
@@ -4,6 +4,14 @@
     font-size: 46px;
     font-weight: 700;
     margin-bottom: 5px;
+
+    @media only screen and (max-width: 800px) { 
+      font-size: 38px;
+    }
+  
+    @media only screen and (max-width: 500px) { 
+      font-size: 30px;
+    }
   }
 }
 
@@ -19,6 +27,10 @@
   flex-direction: column;
   row-gap: .7em;
   margin-top: 50px;
+
+  @media only screen and (max-width: 900px) { 
+    margin-top: 1em;
+  }
 }
 
 .projects__project {
@@ -45,6 +57,15 @@
     margin: 0;
     transition: 0.3s;
   }
+
+  @media only screen and (max-width: 1000px) { 
+    padding: 0.5em 2em;
+  }
+
+  @media only screen and (max-width: 600px) { 
+    padding: 0.5em 1em;
+    font-size: 15px;
+  }
 }
 
 .projects__project--finnished {
@@ -53,7 +74,7 @@
 
 .project__progressLine {
   height: 24px;
-  max-width: 500px;
+  max-width: 50%;
   width: 100%;
   border: 2px solid $secondaryColor;
   border-radius: 15px;
@@ -62,6 +83,7 @@
   justify-content: center;
   align-items: center;
   background: $backgroundColor;
+  margin-left: .2em;
 
   span {
     z-index: 2;
