--- a/frontend/src/styles/components/TeamPage.scss
+++ b/frontend/src/styles/components/TeamPage.scss
@@ -4,6 +4,10 @@
     font-size: 46px;
     font-weight: 700;
     margin-bottom: 5px;
+
+    @media only screen and (max-width: 800px) { 
+      font-size: 38px;
+    }
   }
 }
 
@@ -11,12 +15,23 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-top: 1em;
+
+  @media only screen and (max-width: 900px) { 
+    flex-direction: column;
+  }
 }
 
 .team__main {
   max-width: 73%;
   width: 100%;
+
+  @media only screen and (max-width: 1200px) { 
+    max-width: 66%;
+  }
+
+  @media only screen and (max-width: 900px) { 
+    max-width: 100%;
+  }
 }
 
 .team__sidebar {
@@ -24,7 +39,20 @@
   max-width: 22%;
   width: 100%;
   border: 1px solid $secondaryColor;
-  height: 600px;
+  min-height: 600px;
+
+  @media only screen and (max-width: 1600px) { 
+    min-height: 450px;
+  }
+
+  @media only screen and (max-width: 1200px) { 
+    max-width: 30%;
+  }
+
+  @media only screen and (max-width: 900px) { 
+    margin-top: 2em;
+    max-width: 100%;
+  }
 }
 
 .sidebar__header {
@@ -74,16 +102,22 @@
   flex-direction: column;
   justify-content: center;
   margin-left: 2em;
+
+  @media only screen and (max-width: 1400px) { 
+    margin-left: 1em;
+  }
 }
 
 .member__info--name {
   font-size: 16px;
+  text-wrap: nowrap;
 }
 
 .member__info--role {
   display: block;
   margin-top: 3px;
   font-size: 14px;
+  text-wrap: nowrap;
 }
 
 .files__heading {
@@ -117,6 +151,10 @@
     background: $secondaryColor;
     color: $focusColor;
   }
+
+  @media only screen and (max-width: 600px) { 
+    padding: .5em 1em;
+	}
 }
 
 .newProjectPopup {
