--- a/frontend/src/styles/components/TeamSettingsPage.scss
+++ b/frontend/src/styles/components/TeamSettingsPage.scss
@@ -1,6 +1,10 @@
 .team__info {
   margin-top: 1em;
   font-size: 18px;
+
+  @media only screen and (max-width: 500px) { 
+    font-size: 15px;
+  }
 }
 
 .settings__form {
@@ -29,6 +33,16 @@
       &:focus {
         border: 2px solid $focusColor;
       }
+      
+      @media only screen and (max-width: 1100px) { 
+        margin-left: 0em;
+        margin-top: .2em;
+      }
+    }
+
+    @media only screen and (max-width: 1100px) { 
+      flex-direction: column;
+      align-items: start;
     }
   }
 
