--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -53,7 +53,15 @@ body {
 }
 
 main {
+  padding-top: 60px;
+}
+
+.main__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: calc(100vh - 60px - 40px);
+
 }
 
 .main {
@@ -69,12 +77,27 @@ main {
   padding-top: 80px;
   padding-bottom: 100px;
   min-height: calc(100vh - 60px - 40px - 180px);
+
+  @media only screen and (max-width: 1500px) { 
+		max-width: 83%;
+	}
+
+  @media only screen and (max-width: 1300px) { 
+		max-width: 90%;
+    padding-top: 50px;
+    padding-bottom: 60px;
+    min-height: calc(100vh - 60px - 40px - 110px);
+	}
 }
 
 .divider {
   background: $secondaryColor;
   height: 10px;
   width: 250px;
+
+  @media only screen and (max-width: 1024px) { 
+    width: 100px;
+	}
 }
 
 .divider--long {
@@ -113,6 +136,7 @@ main {
   border-radius: 12px;
   background-position: center !important;
 	background-size: cover !important;
+  font-size: 14px;
   z-index: 2;
   display: flex;
   justify-content: center;
@@ -129,10 +153,16 @@ main {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+
+  @media only screen and (max-width: 600px) { 
+    flex-direction: column;
+    align-items: start;
+  }
 }
 
 .subPage__header--addNew {
   border: 3px solid $secondaryColor;
+  text-wrap: nowrap;
   font-size: 16px;
   border-radius: 50px;
   text-decoration: none;
@@ -141,21 +171,143 @@ main {
   transition: .3s;
   background: $backgroundColor;
   cursor: pointer;
+  width: fit-content;
 
   &:hover {
     background: $secondaryColor;
     color: $focusColor;
   }
+
+  @media only screen and (max-width: 600px) { 
+    padding: .5em 1em;
+	}
 }
 
 .subPage__buttons {
   display: flex;
   flex-direction: row;
-  column-gap: 1.5em
+  column-gap: 1.5em;
+
+  @media only screen and (max-width: 600px) { 
+    column-gap: 0.5em;
+    margin-bottom: 1em;
+	}
 }
 
 .deadline--close {
   color: red;
+}
+
+#hamburger_menu {
+  display: none;
+  min-width: 38px;
+  cursor: pointer;
+  z-index: 5;
+
+  @media only screen and (max-width: 750px) { 
+    display: block;
+  }
+}
+
+#hamburger_menu span {
+  display: block;
+  margin-top: 8px;
+  position: absolute;
+  height: .1em;
+  width: 32px;
+  background: $focusColor;
+  border-radius: 2px;
+  opacity: 1;
+  cursor: pointer;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+#hamburger_menu span:nth-child(1) {
+  top: 12px;
+  -webkit-transform-origin: left center;
+  -moz-transform-origin: left center;
+  -o-transform-origin: left center;
+  transform-origin: left center;
+}
+
+#hamburger_menu span:nth-child(2) {
+  top: 20px;
+  -webkit-transform-origin: left center;
+  -moz-transform-origin: left center;
+  -o-transform-origin: left center;
+  transform-origin: left center;
+}
+
+#hamburger_menu span:nth-child(3) {
+  top: 28px;
+  -webkit-transform-origin: left center;
+  -moz-transform-origin: left center;
+  -o-transform-origin: left center;
+  transform-origin: left center;
+}
+
+#hamburger_menu.open span:nth-child(1) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  top: 8px;
+}
+
+#hamburger_menu.open span:nth-child(2) {
+  width: 0%;
+  opacity: 0;
+}
+
+#hamburger_menu.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  top: 31px;
+}
+
+.menu {
+  display: none;
+  position: fixed;
+  top: 60px;
+  left: 0;
+  max-width: 100vw;
+  width: 0;
+  height: 100%;
+  background: $secondaryColor;
+  color: $focusColor;
+  z-index: 4;
+  min-height: calc(100vh - 60px - 40px);
+  height: calc(100% - 20px);
+  transition: .3s;
+}
+
+.menu__list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 2em;
+  margin: auto;
+  margin-top: 2em;
+
+  a, div {
+    font-size: 26px;
+    text-align: center;
+    padding: .3em 30%;
+  }
+}
+
+.menu--show {
+  display: block;
+  width: 100%;
 }
 
 // Imports
