--- a/frontend/src/styles/components/TaskPage.scss
+++ b/frontend/src/styles/components/TaskPage.scss
@@ -41,7 +41,7 @@
   }
 }
 
-.task__page {
+.taskDetail__page {
   .divider--small {
     @media only screen and (max-width: 500px) { 
       display: none;
