--- a/frontend/src/styles/components/TeamPage.scss
+++ b/frontend/src/styles/components/TeamPage.scss
@@ -31,6 +31,11 @@
 
   @media only screen and (max-width: 900px) { 
     max-width: 100%;
+    margin-top: 0.5em;
+  }
+
+  @media only screen and (max-width: 600px) { 
+    margin-top: 0;
   }
 }
 
@@ -158,10 +163,10 @@
 }
 
 .newProjectPopup {
-  padding: 0 4em 0 4em;
+  padding: 0 4em;
   border-radius: 20px;
   background: $secondaryColor;
-  width: 15%;
+  width: 20%;
 
   .form__input {
     max-width: 100%;
@@ -170,6 +175,15 @@
   .form__input--date {
     color-scheme: dark;
   }
+
+  @media only screen and (max-width: 1250px) { 
+		width: 60%;
+	}
+
+  @media only screen and (max-width: 500px) { 
+    width: 90%;
+		padding: 0 2em;
+	}
 }
 
 .newProjectPopup__buttons {
